--- a/color/static/index.html
+++ b/color/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>boxcraft color for Oculus Quest - A-Frame</title>
+	<title>HAPPY2021 - boxcraft color</title>
 	<!-- https://aframe.io/ -->
 	<script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
 	<!-- https://github.com/supermedium/aframe-environment-component -->
