--- a/test/index.html
+++ b/test/index.html
@@ -23,7 +23,7 @@
   </body>
 
 <script>
-handright.addEventListener((e) => {
+handright.addEventListener("triggerdown", (e) => {
   const p = handright.getAttribute('position');
   const snap = 0.1;
   const p2 = {
