--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>boxcraft for Oculus Quest - A-Frame</title>
-	<script src="https://aframe.io/releases/1.1.0/aframe.min.js"></script>
+	<script src="https://code4fukui.github.io/aframe/dist/aframe-master.min.js"></script>
 </head>
 <body>
 <script>"use strict";
