--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,10 @@
     <!--
     <script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
     -->
-    <script src="./aframe-master.min.js"></script>
+    <!--
+      <script src="./aframe-master.min.js"></script>
+    -->
+    <script src="https://code4fukui.github.io/aframe/dist/aframe-master.min.js"></script>
   </head>
   <body>
     <a-scene id=scene>
